# iouring_project

./: .gitignore  CMakeLists.txt  README.md  dpdk.sh  kernelServerResults.txt  standardServerResults.txt  waitServerResults.txt
Test/io_uring/client/: tcpClient.c  tcpclient
Test/io_uring/newServer/: server  tcpserver  udpServer.c  udpserver
Test/io_uring/server/: server
Test/socket/: server  socketClient.c  socketServer.c  udpServer.c
benchmarking/io_uring/forward/: WIP_udp_multishot.c  liburing_ex.c  standard.c  udp_fixed_file.c  udp_linked.c  udp_multishot.c  udp_standard.c
benchmarking/io_uring/graveyard/: proxy_raw.c  raw_standard.c
benchmarking/io_uring/kernelPooling/: kernelServerResults.txt
benchmarking/io_uring/multishot/: multiServerResults2048.txt  multiple_multishot.c  single  single_multishot.c
benchmarking/io_uring/proxy/: WIP_tcp_muticonn.c  WIP_tcp_standard.c  WIP_udp_multishot.c  WIP_udp_multisocket.c  pkt_liburing_ex.c  pkt_standard_lv2.c  raw_proxy  raw_standard.c  raw_standard_lv2.c  udp_liburing_ex.c  udp_multishot.c  udp_multisocket.c  udp_proxy  udp_standard.c
benchmarking/io_uring/proxy/graveyard/: WIP_udp_multishot.c
benchmarking/io_uring/standard/: standard  standardServerResults.txt  standard_batching.c  standard_coopTaskrun.c  standard_no_msghdr  standard_non_batching.c  standard_registered_file.c  standard_single_and_coop.c  standard_single_issue.c
benchmarking/io_uring/standardWork/: socket  socket.c  standard  standard_batching.c
benchmarking/io_uring/submitAndWait/: r
benchmarking/io_uring/tcp/multishot/: mshot_single_conn.c
benchmarking/io_uring/tcp/standard/: multiple_conn.c  standard_batching.c
benchmarking/io_uring/tcp_only_recv/multishot/: mshot_single_conn.c
benchmarking/io_uring/tcp_only_recv/standard/: multiple_conn.c  standard_batching.c
benchmarking/io_uring/udp/: liburing_ex.c
benchmarking/io_uring/udp/kernelPooling/: kernelServerResults.txt  kernel_polling.c
benchmarking/io_uring/udp/multishot/: multiServerResults2.txt  multiServerResults2048.txt  multiServerResults64.txt  multi_multishot.c  p  single_multishot.c
benchmarking/io_uring/udp/standard/: forwarder.c  mutiple_sockets.c  standard.c  standardServerResults.txt  standard_batching  standard_batching.c  standard_coopTaskrun.c  standard_registered_file.c  standard_single_and_coop.c  standard_single_issue.c
benchmarking/socket/: forw.c  server  server.c  socketServerResults.txt  test.sh  trasm.c
benchmarking/socket/forward/: p  proxy.c  proxy_raw.c  proxy_raw_lv2.c  proxy_udp.c  raw  raw_proxy.c  udp  udp_epoll.c  udp_epoll.cpp
benchmarking/test/: multiServerResults2.txt  multiServerResults2048.txt  multiServerResults64.txt  socketServerResults.txt  socket_standard_test.sh  standardServerResults.txt  wait1ServerResults.txt
benchmarking/test/io_uring/: registered_test.sh
benchmarking/test/socket/: server  server.c  test.sh
benchmarking/test/udpServer/: batchingUdpServer.c  fulltest.sh  kernelServerResults.txt  parse.c  parse.py  registered_test.sh  standardRegisteredServerResults.txt  standardServerResults.txt  test.sh  udpServer.c  udpserver  udpsever  updServer.c  waitForMore  waitForMoreTest.sh  waitMore  waitMoreUdpServer.c  waitRegisteredServerResults.txt  waitServerResults.txt  writeMore
garbageTests/io_uring/client/: client  client.c  tcpClient.c  udpClient.c  udpclient
garbageTests/io_uring/newServer/: server  server.c  tcpServer.c  udpServer.c  udpserver
garbageTests/io_uring/refined_ser_cli/: server.c
garbageTests/io_uring/server/: server.c
garbageTests/io_uring/standard_program/: server.c
garbageTests/socket/: client  socketClient.c  socketServer.c  udpServer
pktgen/: Makefile  udpgen.c
pktgen/OldPacketGen/: log.c
pktgen/include/: log.h
pktgen/newPacketGen/: basicTest.sh  clocktest.c  fullTest.sh  p  registered.sh  test  udpPacketGen.c
setup_scripts/: disableHT.sh  power_mode.sh
trex_scripts/: udp_64.py
(+36 files in other folders)
